<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2010—2016 Denis Nelubin and others.
  ~
  ~ This file is part of Weather Notification.
  ~
  ~ Weather Notification is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Weather Notification is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Weather Notification.  If not, see http://www.gnu.org/licenses/.
  -->

<resources>
    <string name="app_name">Weather notification skin library</string>
    <string name="weather">Weather</string>
    <string name="notification_text_style">Notification text color</string>
    <string name="notification_style_black_text">Black text</string>
    <string name="notification_style_white_text">White text</string>
    <string name="temp_unit">Temperature units</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius_and_fahrenheit">Celsius(Fahrenheit)</string>
    <string name="fahrenheit_and_celsius">Fahrenheit(Celsius)</string>
    <!-- it's the date in dayofweek, yyyy-mm-dd hh:mm format -->
    <!-- see http://developer.android.com/reference/java/util/Formatter.html -->
    <!-- params: update time -->
    <string name="update_time_format" formatted="false">%ta, %&lt;tY-%&lt;tm-%&lt;td %&lt;tH:%&lt;tM</string>
    <!-- params: update time, it's the date in dayofweek, yyyy-mm-dd format -->
    <string name="update_date_format" formatted="false">%ta, %&lt;tY-%&lt;tm-%&lt;td</string>
    <string name="unknown_weather">Weather is unknown</string>
    <!-- params: forecast time, it's the date in dayofweek format -->
    <string name="forecast_day_format">%ta</string>
    <!-- params: location, temperature -->
    <string name="notification_ticker" formatted="false">%s %s</string>
    <!-- params: forecast day, high temp, low temp-->
    <string name="forecast_text" formatted="false">%ta: %s/%s</string>

    <!-- wind directions -->
    <string name="wind_dir_n">N</string>
    <string name="wind_dir_nne">NNE</string>
    <string name="wind_dir_ne">NE</string>
    <string name="wind_dir_ene">ENE</string>
    <string name="wind_dir_e">E</string>
    <string name="wind_dir_ese">ESE</string>
    <string name="wind_dir_se">SE</string>
    <string name="wind_dir_sse">SSE</string>
    <string name="wind_dir_s">S</string>
    <string name="wind_dir_ssw">SSW</string>
    <string name="wind_dir_sw">SW</string>
    <string name="wind_dir_wsw">WSW</string>
    <string name="wind_dir_w">W</string>
    <string name="wind_dir_wnw">WNW</string>
    <string name="wind_dir_nw">NW</string>
    <string name="wind_dir_nnw">NNW</string>

    <string name="wind_speed_unit">Wind speed units</string>
    <string name="wind_speed_unit_mph">mph</string>
    <string name="wind_speed_unit_mps">m/s</string>
    <string name="wind_speed_unit_kmph">km/h</string>

    <!-- params: humidity in percents -->
    <string name="humidity_caption" formatted="false">Humidity: %d%%</string>
    <!-- params: wind direction, wind speed, wind speed unit -->
    <string name="wind_caption" formatted="false">Wind: %s, %d %s</string>

    <!-- weather conditions -->
    <string name="condition_thunderstorm_rain_light">Thunderstorm with light rain</string>
    <string name="condition_thunderstorm_rain">Thunderstorm with rain</string>
    <string name="condition_thunderstorm_rain_heavy">Thunderstorm with heavy rain</string>
    <string name="condition_thunderstorm_light">Light thunderstorm</string>
    <string name="condition_thunderstorm">Thunderstorm</string>
    <string name="condition_thunderstorm_heavy">Heavy thunderstorm</string>
    <string name="condition_thunderstorm_ragged">Ragged thunderstorm</string>
    <string name="condition_thunderstorm_drizzle_light">Thunderstorm with light drizzle</string>
    <string name="condition_thunderstorm_drizzle">Thunderstorm with drizzle</string>
    <string name="condition_thunderstorm_drizzle_heavy">Thunderstorm with heavy drizzle</string>

    <string name="condition_drizzle_light">Light drizzle</string>
    <string name="condition_drizzle">Drizzle</string>
    <string name="condition_drizzle_heavy">Heavy drizzle</string>
    <string name="condition_drizzle_rain_light">Light drizzle rain</string>
    <string name="condition_drizzle_rain">Drizzle rain</string>
    <string name="condition_drizzle_rain_heavy">Heavy drizzle rain</string>
    <string name="condition_drizzle_shower">Shower drizzle</string>

    <string name="condition_rain_light">Light rain</string>
    <string name="condition_rain">Rain</string>
    <string name="condition_rain_heavy">Heavy rain</string>
    <string name="condition_rain_very_heavy">Very heavy rain</string>
    <string name="condition_rain_extreme">Extreme rain</string>
    <string name="condition_rain_freezing">Freezing rain</string>
    <string name="condition_rain_shower_light">Light shower rain</string>
    <string name="condition_rain_shower">Shower rain</string>
    <string name="condition_rain_shower_heavy">Heavy shower rain</string>

    <string name="condition_snow_light">Light snow</string>
    <string name="condition_snow">Snow</string>
    <string name="condition_snow_heavy">Heavy snow</string>
    <string name="condition_sleet">Sleet</string>
    <string name="condition_snow_shower">Shower snow</string>

    <string name="condition_mist">Mist</string>
    <string name="condition_smoke">Smoke</string>
    <string name="condition_haze">Haze</string>
    <string name="condition_sand_whirls">Sand/Dust whirls</string>
    <string name="condition_fog">Fog</string>

    <string name="condition_clouds_clear">Sky is clear</string>
    <string name="condition_clouds_few">Few clouds</string>
    <string name="condition_clouds_scattered">Scattered clouds</string>
    <string name="condition_clouds_broken">Broken clouds</string>
    <string name="condition_clouds_overcast">Overcast clouds</string>

    <string name="condition_tornado">Tornado</string>
    <string name="condition_tropical_storm">Tropical storm</string>
    <string name="condition_hurricane">Hurricane</string>
    <string name="condition_cold">Cold</string>
    <string name="condition_hot">Hot</string>
    <string name="condition_windy">Windy</string>
    <string name="condition_hail">Hail</string>

    <!-- v.0.3.6 -->
    <!-- params: update time -->
    <string name="update_time_short" formatted="false">%tH:%&lt;tM</string>
    <string name="skin_tap_to_config">Tap to configure</string>
    <string name="notification">Notification</string>
    <string name="notification_style">Notification style</string>
    <string name="notification_style_standard">Standard</string>
    <string name="notification_style_custom">Customized</string>
    <string name="notification_icon_style">Show weather icon</string>
    <string name="notification_forecast_style">Show forecasts</string>
    <!-- params: temperature, weather condition -->
    <string name="notification_content_title" formatted="false">%s&#160;&#160;&#160;%s</string>
    <!-- params: max temperature, min temperature, wind text formatted with "humidity_caption", humidity text formatted with "wind_caption" -->
    <string name="notification_content_text" formatted="false">%s/%s&#160;&#160;&#160;%s&#160;&#160;&#160;%s</string>

    <!-- v.0.3.7 -->
    <string name="notification_back_style">Notification background color</string>
    <string name="notification_style_default_back">Default background</string>
    <string name="notification_style_white_back">White background</string>
    <string name="notification_style_black_back">Black background</string>
    <!-- constant value, do not translate -->
    <string name="DEFAULT_NOTIFICATION_TEXT_STYLE">BLACK_TEXT</string>

</resources>
